src/objects/Purchase_order__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_amount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation amount</label>
        <referenceTo>Allocation_amount__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_date__c</fullName>
        <description>Type in date the date when the cost is expected to occur. Will be use for forecasting in coming versions of Musqot.</description>
        <inlineHelpText>Type in date the date when the cost is expected to occur.</inlineHelpText>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Purchase_orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase article</label>
        <referenceTo>Purchase_article__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_order__c</fullName>
        <label>Purchase order externalid</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchase_order_cloesed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, then you can&apos;t registry more invoice on this PO number</inlineHelpText>
        <label>Purchase order closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_order_name__c</fullName>
        <label>Purchase order number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_order_send__c</fullName>
        <description>The date purchase send to supplier</description>
        <inlineHelpText>The date purchase send to supplier</inlineHelpText>
        <label>Purchase order send</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_date__c</fullName>
        <inlineHelpText>Purchase order will be sent to supplier this date. 
To email you have in field &quot;Supplier email&quot;.
Leave &quot;Send date&quot; empty if you NOT will send.</inlineHelpText>
        <label>Send date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_email__c</fullName>
        <label>Supplier email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>subproject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subproject</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipName>Purchase_orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>total_Invoice_cost__c</fullName>
        <label>Invoice cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase order</label>
    <nameField>
        <label>Purchase order name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>